@@ -1,3 +1,4 @@
+6/12/12 more refactoring of model-container classes
 6/12/12 create a property that ensures that our line is not undefined
 6/12/12 refactor duplication in model-container classes for first 2 tabs
 6/12/12 refactor duplication in control panels for interactive equation
